{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 248,
  "lineage": "0e0dad3c-1475-352c-bde6-0aa0ff2b232c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00905669203982f88",
            "arn": "arn:aws:ec2:ap-south-1:710402539515:instance/i-03289b5ae66b00493",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03289b5ae66b00493",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b5ef9a71c1680959",
            "private_dns": "ip-10-10-0-135.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.135",
            "public_ip": "65.0.17.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-092ad05418328b5ce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058e74d7209fa6340",
            "tags": {
              "Name": "Demo-Instance-1"
            },
            "tags_all": {
              "Name": "Demo-Instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07cecedfdaaaff689"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo-key-pair",
            "aws_security_group.Demo_SG_allow_ssh_http",
            "aws_subnet.demo-subnet-1a",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5ee92e2d63afc18",
            "arn": "arn:aws:ec2:ap-south-1:710402539515:instance/i-010be0c1af88ae042",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010be0c1af88ae042",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08eba5c81934dba20",
            "private_dns": "ip-10-10-2-65.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.65",
            "public_ip": "3.111.38.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0023bf146e13a5ba3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077ed2e64578ecded",
            "tags": {
              "Name": "Demo-Instance-2"
            },
            "tags_all": {
              "Name": "Demo-Instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07cecedfdaaaff689"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo-key-pair",
            "aws_security_group.Demo_SG_allow_ssh_http",
            "aws_subnet.demo-subnet-1c",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:710402539515:internet-gateway/igw-07df686a6b7405d1e",
            "id": "igw-07df686a6b7405d1e",
            "owner_id": "710402539515",
            "tags": {
              "Name": "Demo-IG"
            },
            "tags_all": {
              "Name": "Demo-IG"
            },
            "vpc_id": "vpc-072a89af48bad88d1"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "demo-LB-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:710402539515:loadbalancer/app/demo-LB-1/9c0228f37d8b076a",
            "arn_suffix": "app/demo-LB-1/9c0228f37d8b076a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "demo-LB-1-2108727224.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:710402539515:loadbalancer/app/demo-LB-1/9c0228f37d8b076a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-LB-1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07cecedfdaaaff689"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-058e74d7209fa6340"
              },
              {
                "subnet_id": "subnet-077ed2e64578ecded"
              }
            ],
            "subnets": [
              "subnet-058e74d7209fa6340",
              "subnet-077ed2e64578ecded"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-072a89af48bad88d1",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.Demo_SG_allow_ssh_http",
            "aws_subnet.demo-subnet-1a",
            "aws_subnet.demo-subnet-1c",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "demo-listener-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:710402539515:listener/app/demo-LB-1/9c0228f37d8b076a/2df959cb2e954181",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:710402539515:targetgroup/demo-TG-1/44eedb764b560d6c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:710402539515:listener/app/demo-LB-1/9c0228f37d8b076a/2df959cb2e954181",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:710402539515:loadbalancer/app/demo-LB-1/9c0228f37d8b076a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.demo-LB-1",
            "aws_lb_target_group.demo-TG-1",
            "aws_security_group.Demo_SG_allow_ssh_http",
            "aws_subnet.demo-subnet-1a",
            "aws_subnet.demo-subnet-1c",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "demo-TG-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:710402539515:targetgroup/demo-TG-1/44eedb764b560d6c",
            "arn_suffix": "targetgroup/demo-TG-1/44eedb764b560d6c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:710402539515:targetgroup/demo-TG-1/44eedb764b560d6c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "demo-TG-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-072a89af48bad88d1"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-RT-Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:710402539515:route-table/rtb-0a85b21f5a8af6345",
            "id": "rtb-0a85b21f5a8af6345",
            "owner_id": "710402539515",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Demo-Private-RT"
            },
            "tags_all": {
              "Name": "Demo-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-072a89af48bad88d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-RT-Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:710402539515:route-table/rtb-04fdf638c7c0b6da6",
            "id": "rtb-04fdf638c7c0b6da6",
            "owner_id": "710402539515",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07df686a6b7405d1e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Demo-Public-RT"
            },
            "tags_all": {
              "Name": "Demo-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-072a89af48bad88d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo_IG",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-RT-associaciation-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd6843ec9cfa36fa",
            "route_table_id": "rtb-04fdf638c7c0b6da6",
            "subnet_id": "subnet-058e74d7209fa6340"
          },
          "dependencies": [
            "aws_internet_gateway.demo_IG",
            "aws_route_table.demo-RT-Public",
            "aws_subnet.demo-subnet-1a",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-RT-associaciation-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0738d72c6f62274d9",
            "route_table_id": "rtb-04fdf638c7c0b6da6",
            "subnet_id": "subnet-077ed2e64578ecded"
          },
          "dependencies": [
            "aws_internet_gateway.demo_IG",
            "aws_route_table.demo-RT-Public",
            "aws_subnet.demo-subnet-1c",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-RT-associaciation-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0123cf781b376607d",
            "route_table_id": "rtb-0a85b21f5a8af6345",
            "subnet_id": "subnet-02700b698d1e47bdc"
          },
          "dependencies": [
            "aws_route_table.demo-RT-Private",
            "aws_subnet.demo-subnet-1b",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-RT-associaciation-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0685e20072d815079",
            "route_table_id": "rtb-0a85b21f5a8af6345",
            "subnet_id": "subnet-0d9d13e63c98a2097"
          },
          "dependencies": [
            "aws_route_table.demo-RT-Private",
            "aws_subnet.demo-subnet-1d",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Demo_SG_allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:710402539515:security-group/sg-07cecedfdaaaff689",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07cecedfdaaaff689",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from PC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from PC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "710402539515",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-072a89af48bad88d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:710402539515:subnet/subnet-058e74d7209fa6340",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058e74d7209fa6340",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "710402539515",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Demo-subnet-1a"
            },
            "tags_all": {
              "Name": "Demo-subnet-1a"
            },
            "vpc_id": "vpc-072a89af48bad88d1"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:710402539515:subnet/subnet-02700b698d1e47bdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02700b698d1e47bdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "710402539515",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Demo-subnet-1b"
            },
            "tags_all": {
              "Name": "Demo-subnet-1b"
            },
            "vpc_id": "vpc-072a89af48bad88d1"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:710402539515:subnet/subnet-077ed2e64578ecded",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077ed2e64578ecded",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "710402539515",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Demo-subnet-1c"
            },
            "tags_all": {
              "Name": "Demo-subnet-1c"
            },
            "vpc_id": "vpc-072a89af48bad88d1"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-subnet-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:710402539515:subnet/subnet-0d9d13e63c98a2097",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9d13e63c98a2097",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "710402539515",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Demo-subnet-1d"
            },
            "tags_all": {
              "Name": "Demo-subnet-1d"
            },
            "vpc_id": "vpc-072a89af48bad88d1"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:710402539515:vpc/vpc-072a89af48bad88d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0dfc2185e333b0bc2",
            "default_route_table_id": "rtb-08720e2d9ec5ddd12",
            "default_security_group_id": "sg-0154b6b432498c9ba",
            "dhcp_options_id": "dopt-00115ac58dec7f6ba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-072a89af48bad88d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08720e2d9ec5ddd12",
            "owner_id": "710402539515",
            "tags": {
              "Name": "Demo_vpc"
            },
            "tags_all": {
              "Name": "Demo_vpc"
            }
          }
        }
      ]
    }
  ]
}